--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <canvas id="canvas"></canvas>
   <h1>Tap to Enter My Wifey</h1>
   <div class="center-button">
-    <a href="C:\Users\Corpus London\Desktop\gf page\romantic.html" style="text-decoration: none;">
+    <a href="romantic.html" style="text-decoration: none;">
       <button>Enter Love Zone 💌</button>
     </a>
   </div>
