--- a/Romantic.html
+++ b/Romantic.html
@@ -136,7 +136,7 @@
       I hope every picture made you smile, because you make my soul smile every single day.  
       I LOVE YOU, WIFEY — Always and Forever 💍💖
     </p>
-     <a href="C:\Users\Corpus London\Desktop\gf page\letter.html" class="love-btn">
+     <a href="letter.html" class="love-btn">
   💌 Read My Love Letter <span class="heart">💖</span>
 </a>
 
