--- a/letter.html
+++ b/letter.html
@@ -109,7 +109,7 @@
     (I used a translator; I hope it’s correct 😅)<br>
     I hope you liked the GF's Day message… and I LOVE YOU SO MUCH WIFEY!</p>
 
-    <a href="C:\Users\Corpus London\Desktop\gf page\surprise.html" class="button">Surprise Here</a>
+    <a href="surprise.html" class="button">Surprise Here</a>
   </div>
 
   <!-- Falling Hearts Animation Script -->
