--- a/Romantic.html
+++ b/Romantic.html
@@ -120,8 +120,8 @@
     <p> To the most Beautiful & Hot Girl , I ever met 😍❤️🥰</p>
 <p><b><i>"In your smile, I find my peace, <br>In your love, my forever begins." 💖.</i></b></p>
     <div class="gallery">
-      <img src="C:\Users\Corpus London\Desktop\gf page\images\yna.jpg" alt="us1" class="pic" />
-      <img src="C:\Users\Corpus London\Desktop\gf page\images\yna2.jpg" alt="us2" class="pic" />
+      <img src="images/yna.jpg" alt="us1" class="pic" />
+      <img src="images/yna2.jpg" alt="us2" class="pic" />
      
     </div>
 
@@ -130,8 +130,8 @@
       You’re the calm in my chaos, the light in my dark, and the only one I want to walk this life with.  
     </p>
     <p><b><i> My love ❤️, in you I found a universe 🌌 where every star ✨ speaks your name. Your smile 😊 calms every storm 🌪️ in me, and your voice 🎶 feels like home 🏡, even when we're miles apart 🌍. You are not just my partner 🤝, you are my peace ☮️, my strength 💪, and the most beautiful part of my life 💫. Loving you is the easiest thing I’ve ever done 💖—and I’ll do it in every lifetime, again and again ♾️.</i></b></p>
-      <img src="C:\Users\Corpus London\Desktop\gf page\images\yna3.jpg" alt="us3" class="pic" />
-      <img src="C:\Users\Corpus London\Desktop\gf page\images\yna4.jpg" alt="us4" class="pic" />
+      <img src="images/yna3.jpg" alt="us3" class="pic" />
+      <img src="images/yna4.jpg" alt="us4" class="pic" />
     <p>
       I hope every picture made you smile, because you make my soul smile every single day.  
       I LOVE YOU, WIFEY — Always and Forever 💍💖
