--- a/letter.html
+++ b/letter.html
@@ -93,15 +93,15 @@
     <h2>To the Love of My Life ❤️</h2>
 
     <!-- Attractive Images -->
-    <img src="C:\Users\Corpus London\Desktop\gf page\images\yna5.jpg" alt="photo1" class="pic" />
-    <img src="C:\Users\Corpus London\Desktop\gf page\images\yna6.jpg" alt="photo2" class="pic" />
+    <img src="images/yna5.jpg" alt="photo1" class="pic" />
+    <img src="images/yna6.jpg" alt="photo2" class="pic" />
 
     <!-- Romantic Letter -->
     <p>I don’t need a special day to tell you how much I love you, but I’m taking this one anyway — just for you 💍.</p>
     <p>No matter the distance, your love 💍 lives in every beat of my heart 💓🌌<br>
     You are not just mine 💍 — you are my reason, my calm, and my forever 💍 🕊️</p>
-    <img src="C:\Users\Corpus London\Desktop\gf page\images\yna7.jpg" alt="photo3" class="pic" />
-    <img src="C:\Users\Corpus London\Desktop\gf page\images\yna8.jpg" alt="photo4" class="pic" />
+    <img src="images/yna7.jpg" alt="photo3" class="pic" />
+    <img src="images/yna8.jpg" alt="photo4" class="pic" />
     <p>I may mess up sometimes and make you angry 💔… but deep down, this man loves you more than words could ever show 🖤🥺<br>
     Even in my flaws, my heart beats only for you — always has, always will 💘🌙.</p>
     <p>One day, we’ll look back at this distance and smile — knowing we survived everything because love like ours doesn’t fade. It grows. Always.</p>
