--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
   <canvas id="canvas"></canvas>
   <h1>Tap to Enter My Wifey</h1>
   <div class="center-button">
-    <a href="Romantic.html" style="text-decoration: none;">
-      <button>Enter Love Zone 💌</button>
+    <button onclick="window.location.href='Romantic.html'">Enter Love Zone 💌</button>
     </a>
   </div>
 
