--- a/letter.html
+++ b/letter.html
@@ -109,7 +109,8 @@
     (I used a translator; I hope it’s correct 😅)<br>
     I hope you liked the GF's Day message… and I LOVE YOU SO MUCH WIFEY!</p>
 
-    <a href="surprise.html" class="button">Surprise Here</a>
+    <button onclick="window.location.href='surprise.html'">Press Here For Surprise</button>
+
   </div>
 
   <!-- Falling Hearts Animation Script -->
