--- a/Romantic.html
+++ b/Romantic.html
@@ -136,8 +136,9 @@
       I hope every picture made you smile, because you make my soul smile every single day.  
       I LOVE YOU, WIFEY — Always and Forever 💍💖
     </p>
-     <button onclick="window.location.href='letter.html'">
-  💌 Read My Love Letter <span class="heart">💖</span> </button>
+    <button></button> <a href="letter.html" class="love-btn">
+  💌 Read My Love Letter <span class="heart">💖</span></button>
+
 </a>
 
   </div>
