--- a/index.html
+++ b/index.html
@@ -64,9 +64,50 @@
 <body>
   <canvas id="canvas"></canvas>
   <h1>Tap to Enter My Wifey</h1>
-  <div class="center-button">
-    <button onclick="window.location.href='Romantic.html'">Enter Love Zone 💌</button>
-    </a>
+<style>
+  .proposal-btn {
+    padding: 15px 30px;
+    font-size: 18px;
+    color: #fff;
+    background: transparent;
+    border: 2px solid #ff4dd2;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    margin: 20px;
+  }
+  .proposal-btn::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #ff4dd2, #ff6ec4);
+    z-index: -1;
+    transition: 0.4s;
+  }
+  .proposal-btn:hover::before {
+    left: 0;
+  }
+  .proposal-btn:hover {
+    color: black;
+    font-weight: bold;
+    box-shadow: 0 0 15px #ff4dd2;
+  }
+  .button-container {
+    text-align: center;
+    margin-top: 40px;
+  }
+</style>
+
+<div class="button-container">
+  <button class="proposal-btn" onclick="window.location.href='Romantic.html'">Enter Love Zone 💌</button>
+</div>
+
   </div>
 
   <script>
