--- a/letter.html
+++ b/letter.html
@@ -108,8 +108,9 @@
     <p>Takot akong mawala ka, dahil ikaw lang ang gusto kong makasama habang buhay 👴🏻👵🏻… may tiwala, paniniwala, at pananampalataya ako sa’yo — ikaw lang ang huli at habang buhay ko ♾️❤️‍🔥<br>
     (I used a translator; I hope it’s correct 😅)<br>
     I hope you liked the GF's Day message… and I LOVE YOU SO MUCH WIFEY!</p>
-
-    <button onclick="window.location.href='surprise.html'">Press Here For Surprise</button>
+   <button>
+     <a href="surprise.html" class="button">Look Here👀</a></button>
+  </div>
 
   </div>
 
