--- a/surprise.html
+++ b/surprise.html
@@ -150,8 +150,58 @@
 </div>
 
 <div class="buttons">
-  <button class="btn btn-yes">Yes, of course 💍</button>
-  <button class="btn btn-no">Not now 😔</button>
+  <!-- 🔥 Stylish Buttons at Bottom -->
+<style>
+  .button-container {
+    position: fixed;
+    bottom: 40px;
+    width: 100%;
+    text-align: center;
+  }
+
+  .proposal-btn {
+    padding: 15px 30px;
+    font-size: 18px;
+    color: #fff;
+    background: transparent;
+    border: 2px solid #ff4dd2;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    margin: 10px;
+  }
+
+  .proposal-btn::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #ff4dd2, #ff6ec4);
+    z-index: -1;
+    transition: 0.4s;
+  }
+
+  .proposal-btn:hover::before {
+    left: 0;
+  }
+
+  .proposal-btn:hover {
+    color: black;
+    font-weight: bold;
+    box-shadow: 0 0 15px #ff4dd2;
+  }
+</style>
+
+<div class="button-container">
+  <button class="proposal-btn" onclick="window.location.href='https://www.instagram.com/the_joketrepreneur?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=='">💍 Yes, of course</button>
+  <button class="proposal-btn" onclick="alert('Okay, maybe later 😢')">Not now</button>
+</div>
+
 </div>
 
 <script>
