--- a/surprise.html
+++ b/surprise.html
@@ -145,8 +145,14 @@
 </div>
 
 <div class="text">
-  “Will you be my last girlfriend?<br>I want to spend my whole life with you, wifey.” 
-<p><b><i> Answer on IG Wifey</b></i> </p>
+  “Will you be my last girlfriend?<br>I want to spend my whole life with you, wifey.”<br><br>
+  <p><b><i>
+    Answer me on 
+    <a href="https://www.instagram.com/the_joketrepreneur?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" style="color: #ff4dd2; text-decoration: underline;">
+      Instagram
+    </a>
+    💌
+  </i></b></p>
 </div>
 
 <div class="buttons">
